--- a/Ecommerce/Ecommerce.csproj
+++ b/Ecommerce/Ecommerce.csproj
@@ -8,6 +8,7 @@
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="wwwroot\admin\" />
+    <Folder Include="wwwroot\products\" />
     <Folder Include="wwwroot\slideshows\" />
     <Folder Include="wwwroot\user\themes\less\oregional\" />
   </ItemGroup>
